Fix rendering of new card textarea on Safari

--- a/client/src/components/CardAdder/CardAdder.scss
+++ b/client/src/components/CardAdder/CardAdder.scss
@@ -5,7 +5,6 @@
 }
 
 .card-adder-textarea {
-  float: right; // removes mysterious empty space at the bottom of the textarea somehow
   box-sizing: border-box;
   width: 100%;
   padding: 10px 8px;
